# pydantic-ai-poc

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  config.py  credential_scanner.py  main.py  pyproject.toml
credential_scanner/: __init__.py  agent_classifier.py  cli.py  models.py  pipeline.py  producers.py  report_generator.py
examples/credential_scanner/: ambiguous.py  mixed_passwords.py  real_secrets.py  safe_patterns.py
src/auditkit/: __init__.py  agent_classifier.py  cli.py  config.py  models.py  pipeline.py  producers.py  providers.py  report_generator.py  validator.py
src/auditkit/agents/: __init__.py  base.py  formatter.py  registry.py  runner.py
src/auditkit/agents/contexts/: __init__.py  credential.py  dependency.py  injection.py
src/auditkit/classifier/: __init__.py  prompts.py  runner.py
src/auditkit/reporter/: __init__.py  context.py  markdown.py
src/auditkit/scanner/: __init__.py  bandit.py  base.py  detect_secrets.py  ruff.py
tests/: test_integration.py
tests/fixtures/: ambiguous.py  config.json  config_with_secrets.yaml  mixed_passwords.py  real_secrets.py  safe_patterns.py  secrets.env
