[project]
name = "pydantic-ai-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-ai>=1.107.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]
